Adicionadas anotações finais em README